# diario-utils

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  PLANS.md  README.md  pyproject.toml
diario_utils/: __init__.py  storage.py
diario_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diario_utils/logging/: __init__.py  logging.py  structlog_config.py
diario_utils/storage/: __init__.py  backend.py  base.py  client.py  config.py  local.py  manifest.py  parquet.py  paths.py
docs/: index.md  storage.md
structlog/: __init__.py
tests/: conftest.py  test_storage.py
